PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? ????, PHP 6.0
- Unicode support. (Andrei, Dmitriy, et al)
- Changed __toString() behavior to call it in all necessary places
  (Marcus, Dmitry)
- Changed "instanceof" and "catch" operators, is_a() and is_subclass_of()
  functions to not call __autoload(). (Dmitry)
- cURL improvements: (Ilia)
  . Added curl_setopt_array() which allows setting of multiple cURL options.
  . Added CURLINFO_HEADER_OUT to facilitate request retrieval.
- Added optional parameter to http_build_query() to allow specification of 
  string separator. (Ilia)
- Added an optional parameter to parse_url() to allow retrieval of distinct URL
  components. (Ilia)
- Added an optional parameter to strstr() and stristr() for retrieval of either
  the part of haystack before or after first occurence of needle. (Johannes)
- Added possibility to check in which extension an internal function was
  defined using reflection API. (Johannes)
- Fixed bug #34286 (__toString() behavior is inconsistent). (Marcus)